--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <option value="">Type</option>
                             <option value="">Type</option>
                         </select>
-                        <button>Find Now</button>
+                        <button><span><i class="fa-solid fa-magnifying-glass"></i></span>Find Now</button>
                     </form>
                 </div>
             </div>
