--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="logo">
                 <a href="/">
-                    <img src="Images/logo.png" alt=""> Happy <span class="text-orange">Travel</span>
+                    <img src="Images/logo.png" alt=""> <span class="text-beguni">Happy </span><span class="text-orange">Travel</span>
                 </a>
             </div>
             <nav>
@@ -30,10 +30,10 @@
 
     <main>
         <section id="hero-section">
-            <div class="container">
+            <div class="container radius">
                 <div class="wrapper">
                     <h1 class="text-center text-white">Happy Your Journey</h1>
-                    <p class="text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ab ipsam assumenda reprehenderit rem minus?</p>
+                    <p class="text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ab ipsam assumenda reprehenderit amet consectetur adipisicing rem minus?</p>
                     <form action="">
                         <input type="text" name="place" placeholder="Where go">
                         <select name="date" id="">
