--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Happy Travel</title>
 </head>
+
 <body>
     <header>
         <div class="container">
             <div class="logo">
                 <a href="/">
-                    <img src="Images/logo.png" alt=""> <span class="text-beguni">Happy </span><span class="text-orange">Travel</span>
+                    <img src="Images/logo.png" alt=""> <span class="text-beguni">Happy </span><span
+                        class="text-orange">Travel</span>
                 </a>
             </div>
             <nav>
@@ -29,33 +35,70 @@
     </header>
 
     <main>
+        <!-- Section number 1 | Hero Section-->
+
         <section id="hero-section">
             <div class="container radius">
                 <div class="wrapper">
                     <h1 class="text-center text-white">Happy Your Journey</h1>
-                    <p class="text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ab ipsam assumenda reprehenderit amet consectetur adipisicing rem minus?</p>
+                    <p class="text-light text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                        ab ipsam assumenda reprehenderit amet consectetur adipisicing rem minus?</p>
                     <form action="">
                         <input type="text" name="place" placeholder="Where go">
                         <select name="date" id="">
                             <option value="" selected>When</option>
-                            <option value="">Date</option>
-                            <option value="">Date</option>
-                            <option value="">Date</option>
-                            <option value="">Date</option>
+                            <option value="">10:00AM</option>
+                            <option value="">02:00PM</option>
+                            <option value="">06:00PM</option>
+                            <option value="">10:00PM</option>
                         </select>
                         <select name="type" id="">
-                            <option value=""selected>Select Type</option>
-                            <option value="">Type</option>
-                            <option value="">Type</option>
-                            <option value="">Type</option>
-                            <option value="">Type</option>
+                            <option value="" selected>Select Type</option>
+                            <option value="">AC</option>
+                            <option value="">None-AC</option>
+                            <option value="">AC-A Type</option>
+                            <option value="">AC-B Type</option>
                         </select>
-                        <button class="text-white bg-orange text-center"> <span><i class="fa-solid fa-magnifying-glass"></i></span>Find Now</button>
+                        <button class="text-white bg-orange text-center"> <span><i
+                                    class="fa-solid fa-magnifying-glass"></i></span>Find Now</button>
                     </form>
                 </div>
             </div>
         </section>
-        <section id=""></section>
+
+        <!-- Section number 1 end-->
+
+
+        <!-- Section number 2 | Popular section-->
+
+
+        <section id="popular-tours" class="mt-100">
+            <div class="container">
+                <div class="text-wrapper">
+                    <h2>Our Popular Tours</h2>
+                    <p class="text-light">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis cumque
+                        pariatur asperiores distinctio excepturi vitae, reiciendis doloremque esse illum?</p>
+                    <ul>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                            ex, itaque quis.</li>
+                    </ul>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt autem quis. Pariatur soluta quam accusantium!</p>
+                    <a href="#" class="btn-orange">Read More</a>
+                </div>
+                
+                <div class="image-wrapper">
+                    <img src="Images/popular-tours.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Section number 2 end-->
+
+
         <section id=""></section>
         <section id=""></section>
         <section id=""></section>
@@ -65,4 +108,5 @@
 
     <footer></footer>
 </body>
+
 </html>
