--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <div class="container">
                 <div class="text-wrapper">
                     <h2>Our Popular Tours</h2>
-                    <p class="text-light">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis cumque
+                    <p class="text-light mt-24">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis cumque
                         pariatur asperiores distinctio excepturi vitae, reiciendis doloremque esse illum?</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
-                            ex, itaque quis.</li>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
-                            ex, itaque quis.</li>
-                        <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                    <ul class="mt-24">
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                             ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                             ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
                             ex, itaque quis.</li>
                     </ul>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt autem quis. Pariatur soluta quam accusantium!</p>
+                    <p class="mt-24">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt autem quis. Pariatur soluta quam accusantium!</p>
                     <a href="#" class="btn-orange">Read More</a>
                 </div>
                 
