--- a/index.html
+++ b/index.html
@@ -76,20 +76,26 @@
             <div class="container">
                 <div class="text-wrapper">
                     <h2>Our Popular Tours</h2>
-                    <p class="text-light mt-24">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis cumque
+                    <p class="text-light mt-24">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis
+                        cumque
                         pariatur asperiores distinctio excepturi vitae, reiciendis doloremque esse illum?</p>
                     <ul class="mt-24">
-                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
-                             ex, itaque quis.</li>
-                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
-                             ex, itaque quis.</li>
-                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam sequi cupiditate
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
                             ex, itaque quis.</li>
                     </ul>
-                    <p class="mt-24">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt autem quis. Pariatur soluta quam accusantium!</p>
+                    <p class="mt-24">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi
+                        est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt
+                        autem quis. Pariatur soluta quam accusantium!</p>
                     <a href="#" class="btn-orange">Read More</a>
                 </div>
-                
+
                 <div class="image-wrapper">
                     <img src="Images/popular-tours.png" alt="">
                 </div>
@@ -99,7 +105,65 @@
         <!-- Section number 2 end-->
 
 
-        <section id=""></section>
+        <!-- Section number 3-->
+
+
+        <section id="destination" class="mt-100">
+            <div class="container">
+                <h2 class="text-center text-title">Choose Your Destination</h2>
+                <p class="text-center text-light mt-24">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius
+                    architecto, vero veniam velit accusantium molestias <br> amet consectetur adipisicing amet
+                    consectetur adipisicing elit elit?</p>
+                <div class="gallery">
+                    <div class="row">
+                        <div class="">
+                            <img src="Images/madives.png" alt="">
+                            <p>Maldives</p>
+                            </img>
+                        </div>
+                        <div class="">
+                            <img src="Images/indonesia.png" alt="">
+                            <p>Indonesia</p>
+                            </img>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="">
+                            <img src="Images/srilanka.png" alt="">
+                            <p>Srilanka</p>
+                            </img>
+                        </div>
+                        <div class="">
+                            <img src="Images/north-america.png" alt="">
+                            <p>North-America</p>
+                            </img>
+                        </div>
+                        <div class="">
+                            <img src="Images/kashmir.png" alt="">
+                            <p>Kashmir</p>
+                            </img>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="">
+                            <img src="Images/bangladesh.png" alt="">
+                            <p>Bangladesh</p>
+                            </img>
+                        </div>
+                        <div class="">
+                            <img src="Images/bandarban.png" alt="">
+                            <p>Bandarban</p>
+                            </img>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Section number 2 end-->
+
         <section id=""></section>
         <section id=""></section>
         <section id=""></section>
