--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- Section number 2 end-->
 
 
-        <!-- Section number 3-->
+        <!-- Section number 3 | Destination-->
 
 
         <section id="destination" class="mt-100">
@@ -162,9 +162,37 @@
 
         </section>
 
-        <!-- Section number 2 end-->
+        <!-- Section number 3 end-->
 
-        <section id=""></section>
+        <!-- Section number 4 | Why choose us -->
+        <section id="why-choose-us">
+            <div class="container">
+                <h2 class="text-center text-title">Why Choose Us</h2>
+                <p class="text-center text-light mt-24">Honest prices – we have the best prices for tours, and a huge selection of destinations <br> will not leave indifferent even avid tourist.</p>
+            </div>
+            <div class="container">
+               <div class="cards">
+                <div class="card">
+                    <img src="Images/icon-1.svg" alt="">
+                    <h3>Handpacked Hotels</h3>
+                    <p>Find the ideal Hand Picked Hotel for your break, whether you're looking for luxury country hotels or an upmarket hotel and spa.</p>
+                   </div>
+                   <div class="card">
+                    <img src="Images/icon-2.svg" alt="">
+                    <h3>World Class Services</h3>
+                    <p>World Class Services Ltd. [WCSPL] stands over 19 long years in Indian commercial business environment and enjoy market space amongst Prominent Facility.</p>
+                   </div>
+                   <div class="card">
+                    <img src="Images/icon-3.svg" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>Our Best Price Guarantee means that you can be sure of booking at the best rate. If you find a lower price elsewhere within 24 hours.</p>
+                   </div>
+               </div>
+            </div>
+        </section>
+
+        <!-- Section number 4 end-->
+
         <section id=""></section>
         <section id=""></section>
         <section id=""></section>
