--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="">
                             <img src="Images/north-america.png" alt="">
-                            <p>North-America</p>
+                            <p>North America</p>
                             </img>
                         </div>
                         <div class="">
@@ -193,7 +193,58 @@
 
         <!-- Section number 4 end-->
 
-        <section id=""></section>
+        <!-- Section number 5 | Deals and Discount -->
+        <section id="deals-discounts" class="mt-100">
+            <div class="container">
+                <h2 class="text-center text-title">Deals & Discounts</h2>
+                <p class="text-center text-light mt-24">When booking with Hilton, travel agents get special rates, including 25-50% off hotel stays.<br> See our discounts and offers exclusive to travel Agents.</p>
+            </div>
+            <div class="container deals deals-1">
+                <div class="wrapper">
+                    <ul>
+                        <li><i class="fa-solid fa-clock"></i>7 Day/ 5 Night</li>
+                        <li><i class="fa-solid fa-users"></i>Max 10</li>
+                        <li><i class="fa-solid fa-location-dot"></i>Malaysia</li>
+                    </ul>
+                    <h3>Tour To Satorini</h3>
+                    <p>The best tours in Santorini according to Viator travelers are: Private Santorini Tailor Made - Choice of the guest! Private Tailor-Made Tour</p>
+                    <h2 class="text-orange">Price: $1200-$1500</h2>
+                    <a href="#" class="btn-orange">Book Now</a>
+                </div>
+            </div>
+
+            <div class="container deals deals-2">
+                <div class="wrapper">
+                    <ul>
+                        <li><i class="fa-solid fa-clock"></i>7 Day/ 5 Night</li>
+                        <li><i class="fa-solid fa-users"></i>Max 10</li>
+                        <li><i class="fa-solid fa-location-dot"></i>Malaysia</li>
+                    </ul>
+                    <h3>Tour To Satorini</h3>
+                    <p>The best tours in Santorini according to Viator<br> travelers are: Private Santorini Tailor Made <br>Choice of the guest! Private Tailor-Made Tour</p>
+                    <h2 class="text-orange">Price: $1200-$1500</h2>
+                    <a href="#" class="btn-orange">Book Now</a>
+                </div>
+            </div>
+
+            <div class="container deals deals-3">
+                <div class="wrapper">
+                    <ul>
+                        <li><i class="fa-solid fa-clock"></i>7 Day/ 5 Night</li>
+                        <li><i class="fa-solid fa-users"></i>Max 10</li>
+                        <li><i class="fa-solid fa-location-dot"></i>Malaysia</li>
+                    </ul>
+                    <h3>Tour To Satorini</h3>
+                    <p>The best tours in Santorini according to Viator travelers are: Private Santorini Tailor Made - Choice of the guest! Private Tailor-Made Tour</p>
+                    <h2 class="text-orange">Price: $1200-$1500</h2>
+                    <a href="#" class="btn-orange mt-24">Book Now</a>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Section number 5 end-->
+
         <section id=""></section>
         <section id=""></section>
     </main>
