--- a/index.html
+++ b/index.html
@@ -245,7 +245,41 @@
 
         <!-- Section number 5 end-->
 
-        <section id=""></section>
+
+        <!-- Section number 6 | Perfect place -->
+        <section id="perfect-place" class="mt-100">
+            <div class="container">
+                <div class="text-wrapper">
+                    <h2>A Simple Perfect Place To Get Lost</h2>
+                    <p class="text-light mt-24">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere quis
+                        cumque
+                        pariatur asperiores distinctio excepturi vitae, reiciendis doloremque esse illum?</p>
+                    <ul class="mt-24">
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
+                            ex, itaque quis.</li>
+                        <li class="text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quam
+                            sequi cupiditate
+                            ex, itaque quis.</li>
+                    </ul>
+                    <p class="mt-24">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, deleniti modi
+                        est fugiat dicta quae obcaecati. Error, facilis quaerat assumenda esse aliquam quos nesciunt
+                        autem quis. Pariatur soluta quam accusantium!</p>
+                    <a href="#" class="btn-orange">Read More</a>
+                </div>
+
+                <div class="image-wrapper">
+                    <video src="Images/island.mp4" controls width="610px" height="424px"></video>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section number 6 end-->
+
+
         <section id=""></section>
     </main>
 
