--- a/index.html
+++ b/index.html
@@ -271,8 +271,9 @@
                     <a href="#" class="btn-orange">Read More</a>
                 </div>
 
-                <div class="image-wrapper">
+                <div class="video-wrapper">
                     <video src="Images/island.mp4" controls width="610px" height="424px"></video>
+                    <h3>Watch Our Banglo</h3>
                 </div>
             </div>
         </section>
