--- a/index.html
+++ b/index.html
@@ -272,8 +272,9 @@
                 </div>
 
                 <div class="video-wrapper">
+                    <h3>Watch The Video</h3>
                     <video src="Images/island.mp4" controls width="610px" height="424px"></video>
-                    <h3>Watch Our Banglo</h3>
+                    
                 </div>
             </div>
         </section>
