--- a/index.html
+++ b/index.html
@@ -282,10 +282,61 @@
         <!-- Section number 6 end-->
 
 
-        <section id=""></section>
+        <!-- Section number 7 | Newsletter -->
+
+        <section id="newsletter" class="mt-100">
+            <div class="container">
+                <form class="form-wrapper">
+                    <h3>Newsletter</h3>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <div class="border"></div>
+                    <input type="text" name="name" id="" placeholder="Enter your name">
+                    <input type="email" name="email" id="" placeholder="Enter your email">
+                    <button class="btn-orange">Subscribe</button>
+                </form>
+                
+                <div class="image-wrapper">
+                    <img src="Images/newsletter.png" alt="">
+                    <div class="discount-tag">
+                        <h3 class="text-white">happytravel.com</h3>
+                        <p class="text-white">Save Up To 75%</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!-- Section number 7 end-->
     </main>
 
-    <footer></footer>
+    <footer>
+        <!-- Footer section  -->
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <a href="/">
+                    <img src="resources/logo.png" alt="">
+                    <span>Happy <span class="text-orange">Travel</span></span>
+                </a>
+            </div>
+            <p class="text-center">
+                Happy Travel is the most famous traveling agency in the country.
+            </p>
+            <ul class="social">
+                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+            </ul>
+        </div>
+        <div class="border container"></div>
+        <div class="container">
+            <p>© 2024, All Rights Reserved.</p>
+        </div>
+    </footer>
+    <!-- Footer section end -->
+    </footer>
 </body>
 
 </html>
